--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             </div>
 
-            <div id="message"> <p class="messageText"> Choose one option from above. </p> </div>
+            <div id="message"> <p id="messageText"> Choose one option from above. </p> </div>
 
             <div id="computerSide">
 
